clientside/src/index.css
body {
  margin: 0;
  font-family: 'Indie Flower', cursive;
  font-weight: bolder;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: center;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* color scheme for website
green - #80DB3B
yellow - #DBD530
red - #DB253B
purple - #8751DB
darker green - #46DB66

*/

h1 {
  font-size: 300%;
}

h2 {
  font-size: 200%;
}

p {
  font-size: 120%;
  font-weight: normal;
}

hr {
  width: 80%;
  border-bottom: 1px dashed #8751DB;
  margin-bottom: 40px;
}

.break {
  flex-basis: 100%;
  height: 0;
}

